fixed desktop menu overflow

--- a/css/menu.css
+++ b/css/menu.css
@@ -88,7 +88,7 @@ header {
         align-items: center;
         justify-content: space-between;
         width: 100%;
-        margin: 0 3rem;
+        padding: 0 2rem;
     }
 
     .logo-large {
@@ -99,7 +99,7 @@ header {
 
     .menu-list {
         display: flex;
-        gap: 5rem;
+        gap: 4rem;
         list-style: none;
     }
 
@@ -120,7 +120,7 @@ header {
     }
 
     .search-bar input {
-        width: 12rem;
+        width: 100%;
         height: 4rem;
         font-size: 1.5rem;
         border-radius: 1.5rem;
